packages/yew-functional-macro/tests/function_attr/generic-props-fail.stderr
error[E0412]: cannot find type `INVALID` in this scope
  --> $DIR/generic-props-fail.rs:26:19
   |
21 | fn compile_fail() {
   |                - help: you might be missing a type parameter: `<INVALID>`
...
26 |     html! { <Comp<INVALID> /> };
   |                   ^^^^^^^ not found in this scope

error[E0599]: no method named `build` found for struct `PropsBuilder<PropsBuilderStep_missing_required_prop_a>` in the current scope
  --> $DIR/generic-props-fail.rs:23:14
   |
4  | #[derive(Clone, Properties, PartialEq)]
   |                 ---------- method `build` not found for this
...
23 |     html! { <Comp<Props> /> };
   |              ^^^^ method not found in `PropsBuilder<PropsBuilderStep_missing_required_prop_a>`
   |
   = help: items from traits can only be used if the trait is implemented and in scope
   = note: the following trait defines an item `build`, perhaps you need to implement it:
           candidate #1: `proc_macro::bridge::server::TokenStreamBuilder`

error[E0599]: no function or associated item named `new` found for struct `yew::virtual_dom::vcomp::VChild<yew_functional::FunctionComponent<comp<MissingTypeBounds>>>` in the current scope
  --> $DIR/generic-props-fail.rs:28:14
   |
28 |     html! { <Comp<MissingTypeBounds> /> };
   |              ^^^^ function or associated item not found in `yew::virtual_dom::vcomp::VChild<yew_functional::FunctionComponent<comp<MissingTypeBounds>>>`
   |
  ::: $WORKSPACE/packages/yew-functional/src/lib.rs
   |
   | pub struct FunctionComponent<T: FunctionProvider + 'static> {
   | ----------------------------------------------------------- doesn't satisfy `_: yew::html::component::Component`
   |
   = note: the method `new` exists but the following trait bounds were not satisfied:
           `yew_functional::FunctionComponent<comp<MissingTypeBounds>>: yew::html::component::Component`

error[E0277]: the trait bound `MissingTypeBounds: yew::html::component::properties::Properties` is not satisfied
  --> $DIR/generic-props-fail.rs:28:14
   |
28 |     html! { <Comp<MissingTypeBounds> /> };
   |              ^^^^ the trait `yew::html::component::properties::Properties` is not implemented for `MissingTypeBounds`
   |
   = note: required because of the requirements on the impl of `yew_functional::FunctionProvider` for `comp<MissingTypeBounds>`

error[E0277]: can't compare `MissingTypeBounds` with `MissingTypeBounds`
  --> $DIR/generic-props-fail.rs:28:14
   |
28 |     html! { <Comp<MissingTypeBounds> /> };
   |              ^^^^ no implementation for `MissingTypeBounds == MissingTypeBounds`
   |
   = help: the trait `std::cmp::PartialEq` is not implemented for `MissingTypeBounds`
   = note: required because of the requirements on the impl of `yew_functional::FunctionProvider` for `comp<MissingTypeBounds>`

error[E0107]: wrong number of type arguments: expected 1, found 0
  --> $DIR/generic-props-fail.rs:31:14
   |
31 |     html! { <Comp /> };
   |              ^^^^ expected 1 type argument
